--- a/css/bundle.css
+++ b/css/bundle.css
@@ -1846,7 +1846,7 @@ a {
     border-radius: 10px;
     position: relative;
     padding: 35px 38px;
-    background: url("../img/digital-logo.jpg");
+    background: url("../img/contact-background.jpg");
     background-position: bottom;
     background-repeat: no-repeat; }
     @media (max-width: 430px) {
